--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,38 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <div class="header-contents">
+        <%= link_to image_tag("logo.png", class: "header-logo"), :rooms %>
+        
+        <div>
+          <%= form_with url: rooms_search_path, method: :get, class: "header-form-contents" do |f| %>
+            <%= f.text_field :area, placeholder: "エリア検索", class: "header-form" %>
+            <%= f.submit "検索", class: "header-search" %>
+          <% end %>
+          
+          <%= form_with url: rooms_search_path, method: :get, class: "header-form-contents" do |f| %>
+            <%= f.text_field :keyword, placeholder: "キーワード検索", class: "header-form" %>
+            <%= f.submit "検索", class: "header-search" %>
+          <% end %>
+        </div>
+        
+        <% if logged_in? %>
+          <%= render "shared/logged_in" %>
+        <% else %>
+          <%= render "shared/not_logged_in" %>
+        <% end %>
+      </div>
+    </header>
+    
+    <main>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    </main>
+    
+    <footer>
+      <%= image_tag "logo.png" %>
+    </footer>
   </body>
 </html>
